# airo-models

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  environment.yaml  pyproject.toml  setup.cfg  setup.py  visualize_urdf.py
.github/workflows/: mypy.yaml  pre-commit.yaml  publish-to-pypi.yaml  pytest.yaml
airo_models/: __init__.py  files.py  frame_conventions.md  urdf.py
airo_models/arms/crx10ial/: LICENSE.txt  crx10ial.urdf
airo_models/arms/rm75_6f/: README.md  rm75_6f.urdf  rm75_6f_convex_collision.urdf  rm75_6f_primitives.urdf
airo_models/arms/rm75_6fb/: README.md  rm75_6fb.urdf  rm75_6fb_primitives.urdf
airo_models/arms/ur3e/: ur3e.urdf
airo_models/arms/ur3e/visual/: base.blend1  base.mtl  base_cable.mtl  base_cable_labels.mtl  forearm.mtl  shoulder.mtl  upperarm.mtl  wrist1.mtl  wrist2.mtl  wrist3.mtl
airo_models/arms/ur5e/: ur5e.urdf
airo_models/arms/ur5e/visual/: base.blend1  base.mtl  base_cable_labels.mtl  forearm.mtl  shoulder.mtl  upperarm.mtl  wrist1.mtl  wrist2.mtl  wrist3.mtl
airo_models/cameras/: README.md
airo_models/cameras/realsense/d435/: d435.mtl  d435.urdf
airo_models/cameras/zed/: zed2i.mtl  zedm.urdf
airo_models/cameras/zed2i/: zed2i.mtl  zed2i.urdf
airo_models/environment/mounting_plates/: mounting_plate_ur3e.urdf  mounting_plate_ur5e.urdf
airo_models/environment/tables/: table8080.urdf
airo_models/grippers/fingertips/meshes/: backing.mtl  magneto_finger.mtl  robotiq_adapter.mtl
airo_models/grippers/fingertips/originals/: backing.stl  camera_arduino_holder.stl  pcb_top_cover3.STL
airo_models/grippers/fingertips/urdf/: magneto_fingertip.urdf
airo_models/grippers/robotiq_2f_85/meshes/visual/: convert_to_obj.sh
airo_models/grippers/robotiq_2f_85/urdf/: robotiq_2f_85.urdf
airo_models/grippers/schunk_egk40/urdf/: schunk_egk40.urdf
airo_models/grippers/schunk_egk40_magneto/: Readme.md  schunk_egk40_magneto.urdf
airo_models/mobile_platforms/kelo_robile/: kelo_license.txt  readme.txt
airo_models/mobile_platforms/kelo_robile/urdf/: battery_brick.urdf  cpu_brick.urdf  mobi.urdf  wheel_brick.urdf
airo_models/primitives/: __init__.py  box.py  cylinder.py  mesh.py  sphere.py
notebooks/: 01_editing_urdfs.ipynb
notebooks/meshes/: 01_recalculate_ur5e_collision_meshes.ipynb
scripts/: clean_meshes.py  combine_urdf_example.py  generate_convex_collision_meshes.py  generate_primitive_collision_meshes.py  render_model_images.py  visualize_urdf.py
test/: test_arm_models_FK.py  test_dummy.py  test_existence.py  test_urdf_operations.py
test/data/: rm75_6f_poses.txt
