[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airo-models"
version = "0.0.11"
authors = [
  { name = "Andreas Verleysen", email = "andreas.verleysen@ugent.be" },
  { name = "Victor-Louis De Gusseme", email = "victorlouisdg@gmail.com" },
  { name = "Mathieu De Coster", email="mathieu.decoster@ugent.be" },
]
description = "Curated URDFs and 3D models of the robots and gripper used at airo."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "xmltodict",
]

[project.urls]
Homepage = "https://github.com/airo-ugent/airo-models"
Issues = "https://github.com/airo-ugent/airo-models/issues"
