[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airo-models"
version = "0.0.12"
authors = [
  { name = "Andreas Verleysen", email = "andreas.verleysen@ugent.be" },
  { name = "Victor-Louis De Gusseme", email = "victorlouisdg@gmail.com" },
  { name = "Mathieu De Coster", email="mathieu.decoster@ugent.be" },
]
description = "Curated URDFs and 3D models of the robots and gripper used at airo."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "coacd>=1.0.11",
    "pyroki",
    "xmltodict>=1.0.2",
]

[project.optional-dependencies]
# Dependencies for the browser-based URDF visualizer (scripts/visualize_urdf.py).
viz = [
    "viser>=1.0.0",
    "yourdfpy>=0.0.56",
    "numpy",
]
# Dependencies for generating convex collision meshes (scripts/generate_convex_collision_meshes.py).
collision = [
    "coacd>=1.0.0",
    "trimesh>=4.0.0",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/airo-ugent/airo-models"
Issues = "https://github.com/airo-ugent/airo-models/issues"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
]

[tool.uv.sources]
pyroki = { git = "https://github.com/chungmin99/pyroki.git" }
